# secrets-scanner

./: .gitignore  MIGRATION GUIDE.md  README.md  pyproject.toml
secrets-scanner/: __init__.py  config_manager.py  default_config.yaml  git_utils.py  pattern_manager.py  scanner.py
secrets_scanner/: cli.py  finding.py  git_utils.py  scanner.py
